<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.xealnfc.XealViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant_background">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/xeal_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/NfcSearchLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="@style/SubHeader1"
                android:text="@string/searching_nfc"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="20dp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@android:color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/NfcRetryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/SubHeader1"
                android:text="@string/searching_nfc_failed"/>

            <Button
                android:id="@+id/button_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="45dp"
                android:paddingEnd="45dp"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> viewModel.onDetectNfcRetry()}"
                android:background="@drawable/button_default_bg"
                android:text="@string/retry"
                android:textAppearance="@style/SubHeader1"
                android:textColor="@android:color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>