<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.xealnfc.XealViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant_background">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:textAppearance="@style/Header1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Firstname Lastname"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/available_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_bg_transparent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/xeal_cirle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/xeal_circle"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/available_fund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Header2"
                android:layout_marginStart="19dp"
                app:layout_constraintBottom_toTopOf="@id/available_fund_label"
                app:layout_constraintTop_toTopOf="@+id/xeal_cirle"
                app:layout_constraintStart_toEndOf="@+id/xeal_cirle"
                tools:text="$8.00"/>

            <TextView
                android:id="@+id/available_fund_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:text="@string/funds_available"
                android:textAppearance="@style/SubHeader2"
                android:alpha="0.6"
                app:layout_constraintTop_toBottomOf="@+id/available_fund"
                app:layout_constraintBottom_toBottomOf="@+id/xeal_cirle"
                app:layout_constraintStart_toStartOf="@+id/available_fund"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/reload_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_amount"
            android:textAppearance="@style/SubHeader1"
            android:alpha="0.6"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/available_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@+id/reload_label">
            
            <Button
                android:id="@+id/button_10"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickFor10()}"
                android:background="@drawable/button_default_bg"
                android:text="@string/select_10"
                android:textAppearance="@style/Button"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/button_25"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickFor25()}"
                android:background="@drawable/button_default_bg"
                android:text="@string/select_25"
                android:textAppearance="@style/Button"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/button_50"
                android:layout_width="0dp"
                android:layout_height="68dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.onClickFor50()}"
                android:background="@drawable/button_default_bg"
                android:text="@string/select_25"
                android:textAppearance="@style/Button"
                android:textColor="@android:color/white"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="58dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pay_now_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:stateListAnimator="@null"
                android:background="@drawable/button_bkg_selector"
                android:text="@string/pay_now"
                android:textAppearance="@style/ButtonXL"
                android:textColor="@color/purple_xeal"
                android:enabled="false"
                android:onClick="@{() -> viewModel.onPayNowClick()}"
                app:layout_constraintTop_toTopOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:visibility="gone"
                android:indeterminateTint="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>